--- a/.github/workflows/jupyter_scheduler.yml
+++ b/.github/workflows/jupyter_scheduler.yml
@@ -1,8 +1,10 @@
 name: Run Jupyter Notebook Daily
 
 on:
+  push:
   schedule:
-    - cron: '0 8 * * *'  # Run at 8:00 AM UTC
+    - cron: '0 7 * * *'  # Run at 8:00 AM in your local time zone (CET)
+    - cron: '0 11 * * *'  # Run at 12:00 PM (midday) in your local time zone (CEST)
 
 jobs:
   run_notebook:
@@ -15,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8  # Adjust the Python version if needed
+        python-version: 3.11  # Adjust the Python version if needed
 
     - name: Install dependencies
       run: pip install jupyter
