--- a/.github/workflows/jupyter_scheduler.yml
+++ b/.github/workflows/jupyter_scheduler.yml
@@ -20,6 +20,18 @@ jobs:
         python-version: 3.11  # Adjust the Python version if needed
 
     - name: Install dependencies
+      run: |
+        pip install jupyter
+        pip install pandas
+        pip install numpy
+        pip install matplotlib
+        pip install requests
+        pip install beautifulsoup4
+        pip install wordcloud
+        pip install nltk
+        pip install scikit-learn
+
+    - name: Install dependencies
       run: pip install jupyter
 
     - name: Run Jupyter Notebook
