--- a/.github/workflows/jupyter_scheduler.yml
+++ b/.github/workflows/jupyter_scheduler.yml
@@ -31,9 +31,10 @@ jobs:
         pip install nltk
         pip install scikit-learn
 
-    - name: Download NLTK stopwords
+    - name: Download NLTK resources
       run: |
         python -c "import nltk; nltk.download('stopwords')"
+        python -c "import nltk; nltk.download('punkt')"
 
     - name: Run Jupyter Notebook
       run: |
